manifests/local-from-registry/polis-server-digifinland.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polis-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polis-server
  template:
    metadata:
      labels:
        app: polis-server
    spec:
      containers:
        - image: europe-north1-docker.pkg.dev/polis-kokeilu/polis-kokeilu-test/polis-server:dev
          imagePullPolicy: Always
          name: polis-server
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              # /home gets proxied to polis-file-server - use api paths for checking polis-server health
              # path: /home
              path: /api/v3/testConnection 
              port: 5000
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 1000m
              memory: 1000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: polis-server-service
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 5000
  selector:
    app: polis-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polis-server-ingress
spec:
  rules:
    - host: polis.local
    # - host: polis-test-gke.digifinland.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polis-server-service
                port:
                  number: 80
